cambios de carousel

--- a/puntosdeventa.html
+++ b/puntosdeventa.html
@@ -50,7 +50,7 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-12">
                 <div id="carousel1" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -80,6 +80,15 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <div class="mapa">
+              <img src="media/mapa.png" alt="mapa" width="100%">
+          </div>
+        </div>
+      </div>
     </div>
 </section>
 <footer class="container-fluid">
