--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                   <div class="redes">
                       <h2>Contacto:</h2>
                       <ul>
-                          <li><a href="tel:+598098640656"><img src="media/contacto/telefono.png" alt="Numero de Telefono" width="100%"></a></li>
-                          <li><a href="https://api.whatsapp.com/send?phone=598098640656"><img src="media/contacto/whatsapp.png" alt="whatsapp" width="100%"></a></li>
-                          <li><a href="https://www.facebook.com/sergionotevaagustar"><img src="media/contacto/social_facebook_box_blue_256_30649.png" alt="facebook" width="100%"></a></li>
+                          <li><a href="tel:+598098640656"><img src="media/contactos/telefono.png" alt="Numero de Telefono" width="100%"></a></li>
+                          <li><a href="https://api.whatsapp.com/send?phone=598098640656"><img src="media/contactos/whatsapp.png" alt="whatsapp" width="100%"></a></li>
+                          <li><a href="https://www.facebook.com/sergionotevaagustar"><img src="media/contactos/social_facebook_box_blue_256_30649.png" alt="facebook" width="100%"></a></li>
                       </ul>
                   </div>
               </div>
