--- a/productos.html
+++ b/productos.html
@@ -91,6 +91,9 @@
                           </div>
                       </div>
                   </div>
+                  <div>
+                    <p class="creado">Creado por: WebK21</p>
+                  </div>
                 </footer>
 </body>
 </html>
