--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./boostrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./estilos.css">
+    <meta name="keywords" content="present, thmpson, sergio Etchevarne, prductos de limpieza">
+    <meta name="description" content="venta de productos de limpieza a precios increibles"
     <title>Present</title>
 </head>
 <body style="background-image: url(media/fondologo.png);">
