--- a/productos.html
+++ b/productos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./boostrap/css/bootstrap.min.css">
+    <meta name="keywords" content="detergente, suavizante, piscina, guantes, alcohol en gel">
+    <meta name="description" content="productos de limpieza present">
     <link rel="stylesheet" href="./estilos.css">
     <title>Present</title>
 </head>
@@ -92,7 +94,7 @@
                       </div>
                   </div>
                   <div>
-                    <p class="creado">Creado por: WebK21</p>
+                    <p class="creado"><a href="https://www.instagram.com/webk21/">Creado por: WebK21</p></a>
                   </div>
                 </footer>
 </body>
