--- a/puntosdeventa.html
+++ b/puntosdeventa.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./boostrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./estilos.css">
+    <meta name="description" content="puntos de venta en Uruguay">
+    <meta name="keywords" content="Paso de los Toros, Tacuarembo, Achar, Peralta, Fray bentos">
     <title>Present</title>
 </head>
 <body style="background-image: url(media/Fondologo.png);">
@@ -105,7 +107,7 @@
         </div>
     </div>
     <div>
-      <p class="creado">Creado por: WebK21</p>
+      <p class="creado"><a href="https://www.instagram.com/webk21/">Creado por: WebK21</p></a>
     </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
