--- a/productos.html
+++ b/productos.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./estilos.css">
     <title>Present</title>
 </head>
-<body style="background-image: url(media/fondologo.png);">
+<body style="background-color: rgba(0, 0, 0, 0.63);">
     <header class="header">
         <img class="logotip" src="media/logo/logopresenttt.jpg" alt="" width="100%">
         <img class="logo" src="media/present-logo.PNG" alt="present-logo" width="100%">
