--- a/puntosdeventa.html
+++ b/puntosdeventa.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Paso de los Toros, Tacuarembo, Achar, Peralta, Fray bentos">
     <title>Present</title>
 </head>
-<body style="background-image: url(media/Fondologo.png);">
+<body style="background-color: rgba(0, 0, 0, 0.651);">
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
